--- a/project/css/stylesheet.css
+++ b/project/css/stylesheet.css
@@ -1,34 +1,6 @@
-/* Custom CSS for responsive behavior */
-@media (min-width: 576px) {
-	/* Show sidebar normally on screens wider than sm */
-	#sidebarMenu {
-		position: static;
-		height: auto;
-		transform: none;
-		visibility: visible !important;
-		width: auto;
-	}
-	
-	.offcanvas-body {
-		overflow: visible;
-	}
-}
-.col-auto {
-  flex: 0 0 auto;  /* Prevent growing/shrinking */
-  width: auto;     /* Reset Bootstrap's column width */
-  min-width: min-content; /* Prevent content collapse */
-}
+/* Makes the offcanvas 80% of the screen width*/
 #offcanvasExample {
 	width: calc(100vw - 20vw);
 }
 
-@media (max-width: 575.98px) {
-	/* Adjust main content margin when sidebar is open */
-	.offcanvas-start {
-		width: 250px;
-	}
-	
-	.col.border {
-		margin-left: 0 !important;
-	}
-}
+
